Fixed Sagger UI request body fields
